--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,6 @@
 build:
   docker:
       worker: Dockerfile
-      worker: bash setx.sH#
+      worker: bash setx.sh
 run:
    worker: python3 -m userbot
